# telegram-stories-analytics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tg_stories/: __init__.py  analysis.py  auth.py  cli.py  exporter.py  html_report.py
tests/: test_analysis.py
tests/fixtures/: sample_full_export.json
